# AlphaService

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_category_service.py  0003_category_archived.py  0004_remove_service_category_service_category.py  0005_remove_service_category_service_category.py
main/templates/main/: base.html  main.html
main/templates/main/includes/: footer.html  head.html  header.html  main_е.html  nav.html
main/templatetags/: main_tags.py
static/: style.css
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
